# src/routes/index.js
@@ -1,5 +1,6 @@
 const express = require("express");
 const authRoutes = require("./auth.routes");
+const courseRoutes = require("./course.routes");
 
 const router = express.Router();
 
@@ -11,5 +12,6 @@ router.get("/health", (_req, res) => {
 });
 
 router.use("/auth", authRoutes);
+router.use("/courses", courseRoutes);
 
 module.exports = router;
